# KOL-Sniper-

./: .dockerignore  .env.example  .gitignore  BILAN_PROJET.md  Dockerfile  README.md  ROADMAP.md  SCALING_PLAN.md  SCALING_PLAN1.md  SECURITY.md  SETUP.md  calls.csv  docker-compose.yml  logger.py  montecarlo.py  notify.py  optimization.md  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  run_all.bat  sniper.py  telegram_bot.py
.github/workflows/: ci.yml
deploy/: kol-sniper-builder.service  kol-sniper.service
kol_sniper/: __init__.py  analytics.py  config.py  domain.py  errors.py  executor.py  health.py  parser.py  risk.py  rpc.py  runtime.py  schema.py  service.py  storage.py  storage_exits.py  strategy.py  transactions.py  validation.py
tests/: __init__.py  conftest.py  test_analytics.py  test_config.py  test_errors.py  test_executor_states.py  test_parser.py  test_persistent_bought_mints.py  test_rpc.py  test_service_executor.py  test_storage_risk.py  test_strategy.py  test_transactions.py
tools/: __init__.py  benchmark.py  check_sdk.mjs  pump_builder.mjs  pump_builder_service.mjs
